fix: project explorer element text overflow.

--- a/src/app/project/components/project-element/project-element.component.scss
+++ b/src/app/project/components/project-element/project-element.component.scss
@@ -32,6 +32,9 @@
 		flex: 1;
 		padding: 6px 0;
 		color: var(--text-color);
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		overflow: hidden;
 	}
 
 	.bold {
